# GAIK-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.standalone  LICENCE  README.md  docker-compose.yaml  drizzle.config.ts  how-to-deploy-rahti2.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
ai/: custom-model-names.ts  inmemory-store.ts  model-names.ts  utils.ts
ai/actions/: search.ts
ai/ai-actions/: incident.ts  search.ts  search_ragbuilder.ts
ai/middleware/: hyde-rag.ts  index.ts  multistage-rag.ts  utils.ts
ai/tools/: str-replace-editor.ts
ai/types/: rag.ts
app/: globals.css  layout.tsx  loading.tsx  not-found.tsx
app/(authenticated)/: layout.tsx  page.tsx
app/actions/: allas.ts
app/styles/: AssistantList.module.css  DatasetManager.module.css  FileUpload.module.css  Monitorpage.module.css  completemodel.css  ragbuilder.css
components/: allas-file-upload.tsx  get-file-icon.tsx  json-schema-generator.tsx  loading.tsx  password-input.tsx
components/allas/: allas-file-upload.tsx  dashboard.tsx  file-statistic.tsx  header.tsx  sidebar.tsx
components/animations/: SuggestionAlert.tsx
emails/: index.ts  invite-email.tsx  test.ts
lib/: allasClient.ts  schemas.ts  utils.ts
lib/config/: models.ts  (+1 more)
openshift/: README.md  how-to-deploy-rahti2.md  route.yaml  secrets.yaml
python/: README.md
python/whisper-api/: .env.example  .gitignore  DEPLOYMENT.md  README.md  main.py  pyproject.toml  start.py  test_api.py
shared/: index.ts  package.json
(+313 files in other folders)
